--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -58,7 +58,7 @@ font-2 = Font Awesome 6 Free Solid:pixelsize=8;2
 font-3 = Font Awesome 6 Brands:pixelsize=10;2
 
 modules-left = xworkspaces xwindow
-modules-right = dollar-today wlan eth date
+modules-right = dollar-today wlan eth wifi date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -105,7 +105,7 @@ font-1 = Font Awesome 6 Free:pixelsize=8;2
 font-2 = Font Awesome 6 Free Solid:pixelsize=8;2
 font-3 = Font Awesome 6 Brands:pixelsize=8;2
  
-modules-right = filesystem pulseaudio xkeyboard memory cpu 
+modules-right = battery filesystem pulseaudio xkeyboard memory cpu 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -222,5 +222,16 @@ pseudo-transparency = true
 
 [module/dollar-today]
 type = custom/script
-exec = ~/.config/polybar/scripts/dollar-today.sh
+exec = ~/.config/polybar/scripts/dollar-today/dollar.sh
+interval = 5
+
+#[module/wifi]
+#type = custom/script
+#exec = echo " "
+#interval = 1
+#click-left = "scripts/wifi/wifi.sh" 
+
+[module/battery]
+type = custom/script
+exec = ~/.config/polybar/scripts/battery/battery.sh
 interval = 1
