--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -105,7 +105,7 @@ font-1 = Font Awesome 6 Free:pixelsize=8;2
 font-2 = Font Awesome 6 Free Solid:pixelsize=8;2
 font-3 = Font Awesome 6 Brands:pixelsize=8;2
  
-modules-right = battery filesystem pulseaudio xkeyboard memory cpu 
+modules-right = battery backlight filesystem pulseaudio xkeyboard memory cpu 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -211,6 +211,14 @@ date =  %Y-%m-%d  %H:%M:%S
 
 label = %date%
 label-foreground = ${colors.primary}
+
+[module/backlight]
+type = internal/backlight
+card = intel_backlight
+use-actual-brightness = true
+enable-scroll = true
+format = <label>
+label =  %percentage%%
 
 [settings]
 screenchange-reload = true
