Color for backlight module

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -218,13 +218,11 @@ card = intel_backlight
 use-actual-brightness = true
 enable-scroll = true
 format = <label>
-label =  %percentage%%
+label = %{F#F0C674}%{F-} %percentage%%
 
 [settings]
 screenchange-reload = true
 pseudo-transparency = true
-
-; vim:ft=dosini
 
 ; -------- Custom Scripts --------
 
